fix: Fix config parsing and validate ETL changes