@@ -54,3 +54,15 @@ lazy val root = (project in file("."))
     "-Xmx2G", 
     "-Dspark.ui.enabled=false"
   )
+
+  Test / fork := true
+  Test / parallelExecution := false
+  Test / javaOptions ++= Seq(
+    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-exports=java.base/sun.util.calendar=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+    "-Xmx2G",
+    "-Dspark.ui.enabled=false"
+  )
